syntax = "proto3";

package product;

service ProductService {
  rpc CreateProduct (CreateProductRequest) returns (Response);
  rpc UpdateProduct (UpdateProductRequest) returns (Response);
  rpc GetProduct (ProductID) returns (Response);
  rpc ListProducts (ProductFilter) returns (Response);
  rpc DeleteProduct (ProductID) returns (Response);
  rpc UpdateInventory (UpdateInventoryRequest) returns (Response);
}

message Response {
  int32 code = 1;
  string status = 2;
  string timestamp = 3;
  string data = 4;
  string error = 5;
}

message CreateProductRequest {
  string name = 1;
  string categoryName = 2;
  string brand = 3;
  string imageUrl = 4;
  string description = 5;
  double price = 6;
  int32 totalStock = 7;
  repeated Variant variants = 8;
}

message UpdateProductRequest {
  string id = 1;
  optional string name = 2;
  optional string categoryName = 3;
  optional string brand = 4;
  optional string imageUrl = 5;
  optional string description = 6;
  optional double price = 7;
  repeated Variant variants = 8;
}

message Variant {
  string size = 1;
  string color = 2;
  int32 stock = 3;
}

message ProductID {
  string id = 1;
}

message ProductFilter {
  int32 page = 1;
  int32 pageSize = 2;
  string categoryName = 3;
  string brand = 4;
}

message UpdateInventoryRequest {
  string productId = 1;
  repeated Variant variants = 2;
}