export const packageName = 'product';

export const grpcService = 'ProductService';

export const grpcMethods = {
    create: 'CreateProduct',

    update: 'UpdateProduct',

    get: 'GetProduct',

    getList: 'ListProducts',

    delete: 'DeleteProduct',

    updateVariants :   'UpdateInventory'
}